objects/Competitor_Products__c.object
<CustomObject>
    <description>Custom object created to add competitor&apos;s products, services, and contracts to the object associated with the related list and save for future use.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up relation to account with whom the Competitor Products will be associated</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Products</relationshipLabel>
        <relationshipName>Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clientrax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heartworm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <controllingField>Species_Type__c</controllingField>
            <picklistValues>
                <fullName>Adiagen/Biomerieux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andiatec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anigen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Betastar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biocheck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotracking/Biopryn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIVI/Svanova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delvo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gerbion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hipra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDVet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inganasa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neogen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Homebrew Assay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Palpation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Traditional Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Ultrasound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portacheck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qiagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tetracore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermo/Life Tech/Prionics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unisensor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VMRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zoetis/Synbiotics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <description>Text field for storing product competitor&apos;s contracts</description>
        <label>Contracts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disease_Condition__c</fullName>
        <label>Disease/Condition</label>
        <picklist>
            <controllingField>Species_Type__c</controllingField>
            <picklistValues>
                <fullName>Acute Enteric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aflatoxin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASFV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avian Influenza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Lactam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Tetra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BetaTetraPirlimycin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluetongue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bovine Abortion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bovine TB/M bovis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brucellosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVDV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAEV/MVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calf Diarrhea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chlamydiosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contagious Agalactia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSFV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBL/BLV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equine/Dist/MfgVar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fasciolosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gentamicin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypodermosis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Test_Year__c</fullName>
        <label>Estimated Test/Year</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to opportunity to allow users to associate competitor products on opportunities</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitor Products</relationshipLabel>
        <relationshipName>Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Test__c</fullName>
        <label>Price/Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <description>Text field to store information related to competitor services</description>
        <label>Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Species_Type__c</fullName>
        <label>Species/Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dairy Contaminants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poultry Tests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swine Tests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruminant Tests</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ag ELISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ab ELISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCR (yellow)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Competitor Product</label>
    <nameField>
        <label>Competitor Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>